syntax = "proto3";
import "PubKeyExchange.proto";
import "CipherPayload.proto";

package ecliptix.proto.app_device;
option csharp_namespace = "Ecliptix.Protobuf.AppDeviceServices";

service AppDeviceServiceActions {
  rpc EstablishAppDeviceEphemeralConnect(PubKeyExchange) returns (PubKeyExchange);
  rpc RegisterDeviceAppIfNotExist(CipherPayload) returns (CipherPayload);
}
